@@ -43,24 +43,7 @@ void doFindReplace(int response_id);
 #endif
 
 void find(Widget* widget,uPtr data);
-//
-//#ifndef _USEQT5_
-//void doSearchPrefs(Widget* widget,uPtr data);
-//#else
 void doSearchPrefs(int state);
-//#endif
-//
-//#ifndef _USEQT5_
-//void docSearchFromBar(Widget* widget,uPtr data);
-//#else
-//void docSearchFromBar(void);
-//#endif
-//
-//#ifndef _USEQT5_
-//void defSearchFromBar(Widget* widget,uPtr data);
-//#else
-//void defSearchFromBar(void);
-//#endif
 
 
 #ifndef _USEQT5_
@@ -70,16 +53,6 @@ void doLiveSearch(GtkWidget* widget,GdkEvent *event,gpointer data);
 void doLiveSearch(void);
 #endif
 
-void regexFind(int dowhat);
-//
-//void searchQT5Docs(Widget* widget,uPtr data);
-//#ifndef _USEQT5_
-//void qt5DocSearchFromBar(Widget* widget,uPtr data);
-//#else
-//void qt5DocSearchFromBar(void);
-//#endif
-//
-//void searchGtkDocsx(Widget* widget,uPtr data);
 
 void showDocView(int howtodisplay,char* text,const char* title);
 void pasteFRClip(Widget* widget,uPtr data);
