@@ -1,4 +1,5 @@
 0.5.0
+Fixed default shortcuts.
 Done toolbar search for api.
 Done toolbar search for qt5.
 Done toolbar search for gtk.
